# PPNLP-Cryptography

secure-message-system/: README.md  main.py  pyproject.toml
secure-message-system/src/: chat.py  crypto.py  identity.py  key_exchange.py  utils.py
secure-message-system/tests/: test_chat.py  test_crypto.py  test_identity.py  test_key_exchange.py
