[project]
name = "ppnlp"
version = "0.1.0"
description = ""
authors = [
    {name = "zen`",email = "wintertemper479@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography (>=46.0.6,<47.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
